--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -7,13 +7,13 @@
     <div id="main">
       <div class="content">
         <h3 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Welcome to MSFT401k!</h3>
-        <p>You've smart!  Way to take control of your 401k!!  We'll send you new allocations every quarter.  If you have any questions, drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
+        <p>You're smart!  Way to take control of your 401k!!  We'll send you new allocations every quarter.  If you have any questions, drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
         <h3 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Get Started Now</h3>
         <p>Update your 401k account now using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a> and this quarter's allocations (below).</p>
-        <table border="1" cellspacing="0">
+        <table style="border: 1px solid black; padding: 0px;">
           <tr>
-            <th>Fund</th>
-            <th>Allocation</th>
+            <th style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px;">Fund</th>
+            <th style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px;">Allocation</th>
           </tr>
           <tr>
             <td>Fund 1</td>
