--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -67,7 +67,7 @@
 			<h3>Why It Matters</h3>
 			<p>With some standard parameters<sup>*</sup>, the difference between annual returns of 5% and 6% is more than half a million dollars, which is an increase of over 25%!</p>
 			<div>
-				<img width="800" src="assets/401kCompoundGrowth.png" alt="What a Difference 1% Makes" />
+				<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/401kCompoundGrowthFull.png" alt="What a Difference 1% Makes" />
 				<br /><span style="font-style: italic; font-size: 80%;">* Parameters: starting today out of college, $100k salary, 6% contribution to 401k, and 3% yearly salary increase.</span>
 			</div>
 			<h3>Here's Where We Come In</h3>
@@ -80,11 +80,11 @@
 			<h3>What Do I Do</h3>
 			<p>It's easy!  Every quarter, we'll send you our recommendation for allocations in your 401k to maximize performance and minimize risk along with detailed <a href="stepbystep">step-by-step instructions</a>.  But, you don't have to give us your login information or access to your hard-earned cash.  You log in and rebalance your 401k by yourself so you're always 100% in control.</p>
 			<div class="two-column-div two-column-margin">
-				<img src="assets/Rebalance.png" alt="Rebalance" />
+				<img style="background-color: #FFFFFF; padding: 32px 20px 20px 20px; border: 1px solid #BBBBBB;" src="assets/Rebalance.png" alt="Rebalance" />
 				<br /><span style="font-style: italic; font-size: 80%;">Rebalance</span>
 			</div>
 			<div class="two-column-div">
-				<img src="assets/EnterPercentages.png" alt="Enter Percentages" />
+				<img style="background-color: #FFFFFF; padding: 20px 30px 30px 30px; border: 1px solid #BBBBBB;" width="315" src="assets/EnterPercentages.png" alt="Enter Percentages" />
 				<br /><span style="font-style: italic; font-size: 80%;">Enter Percentages</span>
 			</div>
 			<div class="clear-div"></div>
@@ -92,7 +92,7 @@
 		<div class="main-section" id="section-returns">
 			<h2>Our Returns</h2>
 			<p>Check out our returns against the S&amp;P 500 both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against the huge dips and have a smoother return.</p>
-			<img src="assets/chartcarousel/Growth_vs_SP500.png" width="800" alt="Growth vs. S&amp;P 500">
+			<div style="width: 800px; height: 400px; background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB; text-align: center; vertical-align: middle; display: table-cell;">Final Returns Chart(s) Goes Here<!--<img src="assets/ReturnsSP500.png" alt="Growth vs. S&amp;P 500">--></div>
 		</div>
 		<div class="main-section" id="section-vision">
 			<h2>Vision</h2>
@@ -101,15 +101,15 @@
 		</div>
 		<div class="main-section" id="section-who">
 			<div class="three-column-div three-column-margin">
-			<div><img src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
+			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Joe.jpg" alt="Joe" /></div>
 				<p>Joe is a product guy from Microsoft, and he's passionate about investment.  He has 3 kids and a playground in his backyard that rivals any public park.</p>
 			</div>
 			<div class="three-column-div three-column-margin">
-			<div><img src="assets/VestMe-Gary.jpg" alt="Gary" /></div>
+			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Gary.jpg" alt="Gary" /></div>
 				<p>Gary is also a Microsoftie.  He's also a web development nerd, and he'll talk your ear off about the benefits of a plant-based diet.</p>
 			</div>
 			<div class="three-column-div">
-			<div><img src="assets/VestMe-Xavier.jpg" alt="Xavier" /></div>
+			<div><img style="border: 1px solid #BBBBBB;" src="assets/VestMe-Xavier.jpg" alt="Xavier" /></div>
 				<p>Xavier is an investment guru.  He is a CFA&reg; charter holder with more than 10 years of experience building financial models.</p>
 			</div>
 			<div class="clear-div"></div>
