fix signup bug; update quarter to month; update terms; update signup email to say don't do anything for now; fix other verbage

--- a/app/views/home/terms.html.erb
+++ b/app/views/home/terms.html.erb
@@ -9,167 +9,25 @@
 
 <div id="main-terms">
 	<div class="content">
-		<p><em>Effective as of March 1, 2013</em></p>
+		<p><em>Effective as of April 15, 2013</em></p>
 
-		<h2>By visiting this site, you accept our terms</h2>
+		<h2>By Visiting This Site, You Accept Our Terms</h2>
+		<p>Under this Agreement, Vest Me, LLC, which does business under the name MSFT401k.com, furnishes on-line financial information including monthly allocations for the Microsoft 401k, opinions, and services to visitors and members. By visiting this website or by communicating with MSFT401k.com through email, you agree to be bound by this Agreement. The term “Use” means the use and availability of, access to, transmission to or from or any exchange of information or communication in connection with or arising from the Service. The term “Service” means this entire website and any communication, directly or indirectly, with MSFT401k.com, Vest Me, LLC and its managing members.</p>
+		<p>This entire agreement between you and MSFT401k.com and Vest Me, LLC supersedes prior agreements regarding its subject matter. Whenever new products or services become available, your use of them will be under this Agreement unless you are notified in writing otherwise. You must comply with any additional terms which apply to third party content, software or other services. This Agreement and/or the services we offer may be changed at any time. At any time for any reason, MSFT401k.com and Vest Me, LLC may alter and significantly change the number of features, membership benefits, frequency and type of reports, and all other material changes to the services provided. MSFT401k.com and Vest Me, LLC retains the right to change or modify the site and services offered at any time. When the terms are changed, notice of the change or changes will be posted on our web site or sent to you via electronic mail. Additionally, the new version of the Agreement will be posted at the web site at all times for your review. By continuing to use the Service, you agree to be bound by the changes in the new version of the Agreement.</p>
 
-		<p>The use of this website is subject to the following terms of use and the conditions of our privacy policy. By visiting this website you are acknowledge that you have read, understood and agree to these. We may update these policies from time to time and it is your responsibility to check for updates.</p>
+		<h2>Scope of Service</h2>
+		<p> All contents of the Service are provided for information and educational purposes only. You agree that the Service should not be interpreted as investment advice, as an endorsement of any security, or as an offer to buy or sell any security. MSFT401k.com, Vest Me, LLC and the managing members of Vest Me, LLC are not a registered broker dealer, or financial advisors. MSFT401k.com, Vest Me, LLC and the managing members do not provide personal investment advice and do not represent that they are a qualified investment advisor or properly licensed parties. You also understand and agree that, from time to time, any or all of the information providers or their affiliates may hold positions in securities mentioned and that they may trade for their own account based on this information. Members and visitors to MSFT401k.com should assume at all times that any and every stock, mutual fund, etf, or other investments that is discussed, listed, and or referred to or which appear at the website in any form may also be currently owned by the managing members of MSFT401k.com and Vest Me, LLC or the members of their direct families or could be in both the near and distant future.</p>
+		<p>Remarks and data comprising the Service are for informational purposes only and are provided without warranty of any kind. In no event will MSFT401k.com, Vest Me, LLC or the managing members of Vest Me, LLC be liable for any direct, indirect, consequential, or incidental damages arising out of any decision made or action taken by you in reliance on the Service, whether or not caused in whole or part by negligence or error of MSFT401k.com, Vest Me, LLC or its managing members.</p>
+		<p>The management of your 401k and trading of securities may not be suitable for all potential users of the Service. You should be aware of the risks inherent in the stock market. Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com, Vest Me, LLC or its managing members will be profitable. Due diligence is necessary for any and all investment or trading decisions to be made by you.</p>
+		<p>The purchase of securities discussed at MSFT401k.com or any email from MSFT401k.com  may result in the loss of some or all of any investment made. Trading stocks, options, or other investment vehicles are inherently filled with risk.</p>
+		<p>As one benefit of membership, a monthly strategic allocation for the Microsoft 401k is provided. As always, keep in mind that recommendations and research provided at the website is only the first step in the investment and trading process. Before making any investment decisions, it is important to perform sufficient due diligence to identify those funds and allocations that match your investing tolerances and constraints. All allocations can result in investment loss, short term trading fees or rebalance restrictions within the Microsoft 401k. Members are highly encouraged to do their own homework before rebalancing their 401k portfolio or buying or selling any fund or allocation shared at MSFT401k.com and through email.</p>
+		<p>It is recommended that you consult a stockbroker or financial advisor before buying or selling securities, or making any investment decisions. You assume the entire cost and risk of any investing and/or trading you choose to undertake including investment losses, short term trading fees and rebalance restrictions.</p>
+		<p>All information provided by MSFT401k.com, Vest Me, LLC or its managing members personally is obtained from sources believed to be accurate and reliable. However, due to the number of sources from which information on the Service is obtained, and the inherent hazards of electronic distribution, there may be delays, omissions, or inaccuracies in such information. WE DO NOT WARRANT THE ACCURACY, COMPLETENESS, CORRECTNESS, OR FITNESS FOR A PARTICULAR PURPOSE OF THE INFORMATION AVAILABLE THROUGH THE SERVICE.</p>
+		<p> No allocation, mutual fund, or stock featured on this website has paid a fee, or otherwise compensated for their appearance, coverage, and/or favorable opinion. In addition, MSFT401k.com, Vest Me, LLC and its managing members do not receive any compensation for websites referred, nor accept advertisements for a fee.</p>
+		<p>The monthly allocations for the Microsoft 401k and opinions expressed about the funds, options, markets and other investments mentioned on this site or through any service offered is purely the result of independent research conducted by MSFT401k.com, Vest Me, LLC and its managing members and is not an offer or solicitation to buy or sell the securities mentioned.</p>
 
-		<p>The following terms and conditions govern your use of MSFT401k.com, its
-		products and services (the “Website”).</p>
-
-		<p>Please read this entire Terms of Service document (the “Agreement”)
-		carefully before using the Website. The Agreement may be modified by the
-		Website from time to time and such modifications will be binding on you
-		when placed online.</p>
-
-		<h2>In General</h2>
-
-		<p> The information provided at this site is informational only
-		and should not be used for replacement of investment advice from a
-		licensed investment professional. Information provided by the Website
-		is believed to be reliable when posted and is for informational purposes
-		only. Every effort has been made to ensure that the material contained
-		herein is accurate at the time of publication. The Website cannot guarantee
-		its accuracy or completeness and accepts no responsibility for any loss
-		arising from any use of or reliance on the information contained herein.
-		The material on this site, including any opinions expressed herein, are
-		subject to change without notice. The Website does not represent that the
-		securities, products, or services discussed are suitable or appropriate for all
-		investors.</p>
-
-		<p>The Website reserves the right to modify from time to time, or discontinue,
-		temporarily or permanently, any or all of its services with or without
-		notice. Content and services may be removed and discarded at any time for
-		any reason.</p>
-
-		<p>Nothing herein should be read to constitute or be considered as an offer or
-		solicitation by MSFT401k.com, its principal Vest Me, LLC, associates
-		or affiliates as an offer to sell or a solicitation to buy securities to any
-		person residing in the United States of America or in any other jurisdiction
-		in which such an offer or solicitation is unlawful. The information is
-		not intended for distribution to, or use by, any person or entity in any
-		jurisdiction or country where such distribution or use would be contrary to
-		law or regulation, or which would subject the Website to any registration
-		requirement within such jurisdiction or country.</p>
-
-		<h2>Scope of Services </h2>
-
-		<p>Information found on the Website is not intended to
-		replace or provide legal, accounting, investment or tax advice, and should
-		not be relied upon in that regard. Information on this site is for educational
-		purposes only.</p>
-
-		<p>MSFT401k.com and it’s principal, Vest Me, LLC, is not registered in any
-		jurisdiction as a securities broker, dealer, investment advisor or CTA.
-		Vest Me, LLC does not provide investment advice based on personal
-		information each client submits through the Website. Vest Me, LLC does
-		not provide trading advice based on, or tailored to, the commodity interest
-		or cash market positions or other circumstances or characteristics of
-		particular clients.</p>
-
-		<p>The Website offers services limited to those allowed by:</p>
-
-		<p>The Investment Advisers Act of 1940 as a bona fide financial publication
-		of general and regular circulation that is not primarily a vehicle for
-		distributing investment advice; and, the Commodity Futures Trading
-		Commission Rule 4.14(a)(9) as commodity trading advisors that provide
-		standardized advice by means of media such as newsletters, prerecorded
-		telephone newslines, Internet web sites, and non-customized computer
-		software.</p>
-
-		<h2>Performance Record</h2>
-
-		<p> Individuals or entities that post promotional
-		material designed to increase paid membership are subject to rigorous
-		rules set out by regulatory bodies such as the SEC, NFA and CFTC. NFA
-		Compliance Rule 2-29 places certain limitations on the use of past or
-		projected performance in communications with the public. CFTC Rules
-		4.41(b)(1), 4.35(a)(6)(i) and 4.35(a)(7)(i) govern certain performance
-		presentations.</p>
-
-		<p>The Website does not keep or post a record of MSFT401k.com’s or Vest
-		Me, LLC’s trades for public scrutiny.</p>
-
-		<p>Any and all trading system performance results posted to the Website
-		is subject to disclosure document requirements in Part 4 of the CFTC’s
-		regulations, specifically, Section 4.41:</p>
-
-		<p>Hypothetical or simulated performance results have certain inherent
-		limitations. Unlike an actual performance record, simulated results do
-		not represent actual trading. Also, since the trades have not actually been
-		executed, the results may have under-or over-compensated for the impact,
-		if any, of certain market factors, such as lack of liquidity. Simulated trading
-		programs in general are also subject to the fact that they are designed with
-		the benefit of hindsight. No representation is being made that any account
-		will or is likely to achieve profits or losses similar to those shown.</p>
-
-		<h2>Conflict of Interest </h2>
-
-		<p>Market analysis and trading tools featured at the
-		Website are based on MSFT401k.com’s investment and trading strategies.</p>
-
-		<p>All statements made represent the opinion of MSFT401k.com and Vest Me,
-		LLC unless otherwise identified.</p>
-
-		<p>Although the information published by the Website has been derived
-		from sources (end of day prices) that are believed to be reliable, they
-		are not always necessarily complete and cannot be guaranteed. Neither
-		MSFT401k.com nor any of its principals and associates shall have any
-		liability for any loss sustained by anyone who has relied on the information
-		published.</p>
-
-		<p>This service is provided for free as a hobby. From time to time,
-		MSFT401k.com and it’s principal Vest Me, LLC, and it’s principal’s
-		managing members may hold and/or trade positions in securities
-		mentioned. In cases where the position is held at the time of publication,
-		appropriate disclosure is made.</p>
-
-		<h2>No Liability </h2>
-
-		<p>The Website does not make any representations, warranties
-		or guarantees, express or implied, regarding the accuracy or completeness
-		of the information found on this Website. In no case shall the Website,
-		nor any individual directly or indirectly involved with the Website, be
-		responsible for any direct or incidental loss incurred as a result of your use
-		of any information presented on the Website.</p>
-
-		<p>The information is issued by the Website with the express condition,
-		to which everyone using it accepts, that no obligation, responsibility or
-		liability shall be incurred by MSFT401k.com, it’s principal, Vest
-		Me, LLC or any of its officers, directors, members, employees, agents,
-		consultants or licensors. They shall not be liable to any person or entity for
-		any losses, damages, costs or expenses (including, but not limited to, loss
-		of profits, loss of use, direct, indirect, incidental or consequential damages)
-		resulting from any errors in, omissions of or alterations to the information
-		contained herein. The foregoing shall apply regardless of whether a claim
-		arises in contract, tort, negligence, strict liability or otherwise. We are not
-		responsible for any loss or damage whatsoever, whether incidental, special,
-		indirect or consequential, in connection with, caused by or arising from
-		any use of or reliance on the information contained herein.</p>
-
-		<p>Under no circumstances shall the Website or its software consultants be
-		liable for direct, indirect, special, incidental, or consequential damages
-		resulting from the use, misuse, or inability to use this software, even if the
-		Website has been advised of the possibility of such damages.</p>
-
-		<h2>Privacy Policy </h2>
-
-		<p>The Website stores no personal information of casual
-		visitors. No special effort is made to track surfing habits. Cookies are used
-		to facilitate member log-on to view secure content.</p>
-
-		<p>The Website does not sell, rent, trade or make available our mailing list to
-		any third party, and will not solicit you to purchase, rent, or use any third
-		party goods or services for which we receive an undisclosed commission,
-		fee or reward.</p>
-
-		<p>This constitutes the Website’s terms of service agreement as of Feb 9th,
-		2013.</p>
-
-		<p>THE WEBSITE MAY MODIFY THIS AGREEMENT AT ANY TIME, AND
-		SUCH MODIFICATIONS SHALL BE EFFECTIVE IMMEDIATELY UPON
-		POSTING OF THE MODIFIED AGREEMENT.</p>
+		<h2>Changes to Terms</h2>
+		<p>THE WEBSITE MAY MODIFY THIS AGREEMENT AT ANY TIME, AND SUCH MODIFICATIONS SHALL BE EFFECTIVE IMMEDIATELY UPON POSTING OF THE MODIFIED AGREEMENT.</p>
 
 	</div>
 
