--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 				<ul>
 					<li>Higher returns, reduced volatility</li>
 					<li>Tailor-made for the Microsoft 401k Plan</li>
-					<li>Just 5 minutes a quarter</li>
+					<li>Just 5 minutes a month</li>
 				</ul>
 			</div>
 			<div id="poster-bullets" style="width: 400px; font-size: 120%; font-weight: normal; margin-bottom: -10px; float: left;">
@@ -63,7 +63,7 @@
 	<div class="content">
 		<div class="main-section" id="section-why">
 			<h2>Why MSFT401k</h2>
-			<p>You're probably already contributing money into your Microsoft 401k.  If you're like most people we talked to, you set up the contribution amount a long time ago and hardly look at it, if ever!  But you can do better in just 5 minutes a quarter.</p>
+			<p>You're probably already contributing money into your Microsoft 401k.  If you're like most people we talked to, you set up the contribution amount a long time ago and hardly look at it, if ever!  But you can do better in just 5 minutes a month.</p>
 			<p style="font-style: italic; font-size: 80%;">P.S.  If you're not already contributing money to your 401k, you should strongly consider it to save for retirement and take advantage of the <a href="http://careers.microsoft.com/careers/en/us/benefits-and-perks.aspx">401k match benefit</a> offered by Microsoft.</p>
 			<h3>Why It Matters</h3>
 			<p>With some standard parameters<sup>*</sup>, the difference between annual returns of 5% and 6% is more than half a million dollars, which is an increase of over 25%!</p>
@@ -79,7 +79,7 @@
 			<p>You've probably heard about the difference between stocks and bonds, particularly that stocks are "risker." Generally speaking, that is true, and that's a core part of how this works...</p>
 			<p>We measure and track market risk and adjust allocations to get higher returns with less volatility.  When market risk is high, we put more money into bonds &mdash; to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks &mdash; to maximize gains when the stock market is doing well.  The extra secret sauce: we tailor fit it to the investment options available under the Microsoft 401k plan.</p>
 			<h3>What Do I Do</h3>
-			<p>It's easy!  Every quarter, we'll send you our recommendation for allocations in your 401k to maximize performance and minimize risk along with detailed <a href="stepbystep">step-by-step instructions</a>.  But, you don't have to give us your login information or access to your hard-earned cash.  You log in and rebalance your 401k by yourself so you're always 100% in control.</p>
+			<p>It's easy!  Every month, we'll send you our recommendation for allocations in your 401k to maximize performance and minimize risk along with detailed <a href="stepbystep">step-by-step instructions</a>.  But, you don't have to give us your login information or access to your hard-earned cash.  You log in and rebalance your 401k by yourself so you're always 100% in control.</p>
 			<div class="two-column-div two-column-margin">
 				<img style="background-color: #FFFFFF; padding: 32px 20px 20px 20px; border: 1px solid #BBBBBB;" src="assets/Rebalance.png" alt="Rebalance" />
 				<br /><span style="font-style: italic; font-size: 80%;">Rebalance</span>
