--- a/app/views/home/stepbystep.html.erb
+++ b/app/views/home/stepbystep.html.erb
@@ -72,7 +72,7 @@
 			<img width="740" src="assets/stepbystep/Step11.png" alt="Step 11" />
 		</div>
 		<h2 id="section-future">Set Future Contributions</h2>
-		<p>We'll help you set your future contributions to the <a href="https://workplaceservices200.fidelity.com/mybenefits/savings2/performance/fundinfo?plan=89766&amp;fundnbr=2013">Fidelity&reg; Institutional Money Market</a> fund, which is an extremely low risk fund essentially equivalent to cash.  You can think of this as putting your money in a temporary holding pen until the next time you rebalance your 401k.  You only need to do this once (i.e. the first time you rebalance).</p>
+		<p>We'll help you set your future contributions to the <a href="https://workplaceservices200.fidelity.com/mybenefits/savings2/performance/fundinfo?plan=89766&amp;fundnbr=2013">Fidelity&reg; Institutional Money Market</a> fund, which is an extremely low risk fund essentially equivalent to cash.  You can think of this as putting all new contributions in a temporary holding pen until the next time you rebalance your 401k.  You only need to do this once (i.e. the first time you rebalance).</p>
 		<div class="white-box">
 			<h3>Step 1: click 'Investments Elections'<sup>*</sup></h3>
 			<img width="740" src="assets/stepbystep/FutureStep1.png" alt="Step 1 - Future Contributions" />
