--- a/app/views/users/alreadysignedup.html.erb
+++ b/app/views/users/alreadysignedup.html.erb
@@ -11,10 +11,8 @@
 	<div class="content">
         <h2>You're Already Signed Up!</h2>
         <p>You're all set.  Look for the email we sent to <%= @user.email %>.</p>
-
-        <p>Can't find the email?  We'll <a onclick="$('#status_msg').text('Email resent.');" href="<%= '/users/' + User.find_by_email(@user.email.downcase).id.to_s %>" data-remote="true" data-type="json">resend</a> it. <span id="status_msg" style="color: #666666; font-style: italic;"><span></p>
-
-        <p>Questions? E-mail us: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
+        <p>Can't find the email?  We'll <a onclick="$('#status_msg').text('Email resent.');" href="<%= '/users/' + User.find_by_email(@user.email.downcase).id.to_s %>" data-remote="true" data-type="json">resend</a> it. <span id="status_msg" style="color: #555555; font-style: italic;"><span></p>
+        <p>Questions? Drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
 	</div>
 
     <%= render 'layouts/footer' %>
