--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -76,7 +76,7 @@
 		</div>
 		<div class="main-section" id="section-how" style="margin-top: -20px;">
 			<h2>How It Works</h2>
-			<p>You've probably heard about the difference between stocks and bonds, particularly that stocks are "risker." Generally speaking, that is true, and that's a core part of how this works...</p>
+			<p>You've probably heard about the difference between stocks and bonds, particularly that stocks are "riskier." Generally speaking, that is true, and that's a core part of how this works...</p>
 			<p>We measure and track market risk and adjust allocations to get higher returns with less volatility.  When market risk is high, we put more money into bonds &mdash; to protect you against a stock market crash, like in 2008.  When market risk is low, we put more money into stocks &mdash; to maximize gains when the stock market is doing well.  The extra secret sauce: we tailor fit it to the investment options available under the Microsoft 401k plan.</p>
 			<h3>What Do I Do</h3>
 			<p>It's easy!  Every month, we'll send you our recommendation for allocations in your 401k to maximize performance and minimize risk along with detailed <a href="stepbystep">step-by-step instructions</a>.  But, you don't have to give us your login information or access to your hard-earned cash.  You log in and rebalance your 401k by yourself so you're always 100% in control.</p>
