add final chart; add some more legaleze; update welcome email to have allocations again; site pretty much ready to go

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -92,8 +92,18 @@
 		</div>
 		<div class="main-section" id="section-returns">
 			<h2>Our Returns</h2>
-			<p>Check out our returns against the S&amp;P 500 both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against the huge dips and have a smoother return.</p>
-			<div style="width: 800px; height: 400px; background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB; text-align: center; vertical-align: middle; display: table-cell;">Final Returns Chart(s) Goes Here<!--<img src="assets/ReturnsSP500.png" alt="Growth vs. S&amp;P 500">--></div>
+			<p>Check out our returns against five other common investment strategies, both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against the huge dips and have a smoother return.<sup>**</sup></p>
+			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/OurReturnsFull.png" alt="Our Returns" />
+			<br />
+			<span style="font-style: italic; font-size: 80%;">
+				** Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable.<br /><br />
+				<strong>MSFT401k.com:</strong> our strategy, which adjusts allocations monthly based on market risk.<br />
+				<strong>Equal Weight:</strong> equal distribution among 8 top funds.<br />
+				<strong>S&amp;P 500:</strong> Standard &amp; Poor's 500 index, which approximates "the stock market."<br />
+				<strong>60/40 (Stocks/Bonds):</strong> monthly rebalancing to 60% stocks and 40% bonds.<br />
+				<strong>BTC LifePath 2040:</strong> BlackRock fund claiming optimize for investors planning to retire around the year 2040.<br />
+				<strong>MSFT:</strong> the Microsoft common stock.
+			</span>
 		</div>
 		<div class="main-section" id="section-vision">
 			<h2>Vision</h2>
