--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,7 @@
 	<div class="content">
 		<p>We are NOT investment advisors.  See our <a href="terms">Terms</a>.</p>
 		<p>Questions? <a href="mailto:team@MSFT401k.com">Contact Us</a>.</p>
+		<p>Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable.</p>
 		<p>CFA&reg; is a registered trademark owned by CFA Institute.</p>
 	</div>
 </footer>
