--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -6,11 +6,61 @@
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
       <div>
-        <h3 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Welcome to MSFT401k!</h3>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Welcome to MSFT401k!</h3>
         <p>You're smart!  You've taken the first step toward higher returns and reduced volatility for your 401k.</p>
-        <p>For now, leave everything as is.  We'll send you an update on May 1<sup>st</sup> with next month's allocations and step-by-step instructions.</p>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Get Started Now</h3>
+        <p>Update your 401k account now using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a> and this month's allocations.<sup>*</sup></p>
+        <h4 style="margin: 20px 0px 5px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 120%;">Allocations</h3>
+        <table style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; border: 1px solid black; padding: 0px; border-spacing: 0; border-collapse: collapse;">
+          <tr>
+            <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 2px 2px 6px; text-align: left;">Fund Name</td>
+            <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 10px; text-align: left;">Allocation</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">VANG INST INDEX PLUS</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">9.19%</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px;text-align: left;">VANG VAL INDEX INST</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px;text-align: right;">9.44%</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">VANG SM GR IDX INST</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">6.35%</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left;">ARTISAN MID CAP</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right;">4.76%</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">RUSSELL INTL GROWTH</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">3.99%</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px;text-align: left;">RUSSELL INTL VALUE</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px;text-align: right;">4.55%</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">PIMCO TOTAL RETURN</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">25.63%</td>
+          </tr>
+          <tr>
+            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left;">VANG ST BD IDX IS PL</td>
+            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right;">36.09%</td>
+          </tr>
+          <tr>
+            <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 2px 2px 6px; text-align: left;">Total</td>
+            <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 10px; text-align: right;">100.00%</td>
+          </tr>
+        </table>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Contact Us</h3>
         <p>Questions? Drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
-        <div><p style="font-style: italic; font-size: 80%;">We are NOT investment advisors. See our <a href="http://www.msft401k.com/terms">Terms</a>.</p></div>
+        <br /><hr />
+        <div>
+          <p style="font-style: italic; font-size: 80%;">* Rebalancing to these allocations may result in a round-trip warning if you have rebalanced your portoflio within the past 30 days.</p>
+          <p style="font-style: italic; font-size: 80%;">We are NOT investment advisors. See our <a href="http://www.msft401k.com/terms">Terms</a>.</p>
+          <p style="font-style: italic; font-size: 80%;">Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable.</p>
+        </div>
       </div>
     </div>
   </body>
