update Gary pic; fix missing 'our' in help our friends and coworkers

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -107,7 +107,7 @@
 		</div>
 		<div class="main-section" id="section-vision">
 			<h2>Vision</h2>
-			<p>We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help friends and coworkers.</p>
+			<p>We started MSFT401k.com because we couldn’t find a decent way to invest our own money. We are setting out to build a product that we want first, and we think it will help our friends and coworkers.</p>
 			<p>We believe in an alternate and better way of investing money in our 401k. We believe risk should be measured and controlled ensuring that we hold the optimal amount of stocks (volatile!) and bonds (stable) depending on market conditions.  And, of course, we use it ourselves.</p>
 		</div>
 		<div class="main-section" id="section-who">
