final cleanup of text across all pages; clean up of terms page; removal of unecessary files in project/repo

--- a/app/views/user_mailer/rebalance_email.html.erb
+++ b/app/views/user_mailer/rebalance_email.html.erb
@@ -5,51 +5,7 @@
   </head>
   <body style="font-family: MetaSerifProBook, 'Lucida Bright', Cambria, Georgia, 'Times New Roman', serif;">
     <div id="main">
-      <div>
-        <h3 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Welcome to MSFT401k!</h3>
-        <p>You're smart!  You've taken the first step toward higher returns and reduced volatility for your 401k.  If you have any questions, drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
-        <h3 style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Get Started Now</h3>
-        <p>Update your 401k account now using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a> and this month's allocations (below).</p>
-        <table style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; border: 1px solid black; padding: 0px; border-spacing: 0; border-collapse: collapse;">
-          <tr>
-            <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 2px 2px 6px; text-align: left;">Fund Name</td>
-            <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 6px 2px 10px; text-align: left;">Allocation</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">PIMCO TOTAL RETURN</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">20%</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px;text-align: left;">VANG ST BD IDX IS PL</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px;text-align: right;">20%</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">RUSSELL INTL VALUE</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">10%</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left;">ARTISAN MID CAP</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right;">10%</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">RUSSELL INTL GROWTH</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">10%</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px;text-align: left;">VANG GRTH INDEX INST</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px;text-align: right;">10%</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left; background-color: #D9D9D9;">VANG SM GR IDX INST</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right; background-color: #D9D9D9;">10%</td>
-          </tr>
-          <tr>
-            <td style="border-top: 1px solid black; padding: 3px 2px 3px 6px; text-align: left;">VANG INST INDEX PLUS</td>
-            <td style="border-top: 1px solid black; padding: 3px 6px 3px 2px; text-align: right;">10%</td>
-          </tr>
-        </table>
-          <div><p style="font-style: italic; font-size: 80%;">We are NOT investment advisors. See our <a href="http://www.msft401k.com/terms">Terms</a>.</p></div>
-      </div>
+      PLACEHOLDER
     </div>
   </body>
 </html>
