--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -68,7 +68,7 @@
 			<h3>Why It Matters</h3>
 			<p>With some standard parameters<sup>*</sup>, the difference between annual returns of 5% and 6% is more than half a million dollars, which is an increase of over 25%!</p>
 			<div>
-				<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/401kCompoundGrowthFull.png" alt="What a Difference 1% Makes" />
+				<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/401kCompoundGrowth.png" alt="What a Difference 1% Makes" />
 				<br /><span style="font-style: italic; font-size: 80%;">* Parameters: starting today out of college, $100k salary, 6% contribution to 401k, and 3% yearly salary increase.</span>
 			</div>
 			<h3>Here's Where We Come In</h3>
@@ -92,16 +92,16 @@
 		</div>
 		<div class="main-section" id="section-returns">
 			<h2>Our Returns</h2>
-			<p>Check out our returns against five other common investment strategies, both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against the huge dips and have a smoother return.<sup>**</sup></p>
-			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/OurReturnsFull.png" alt="Our Returns" />
+			<p>Check out our returns against five other common investment strategies, both when the dot-com bubble burst in early 2000 and the crash of 2008.  Because we allocate funds dynamically to safer investments during periods of high volatility, we are able to protect against huge dips and have a smoother return.<sup>**</sup></p>
+			<img width="740" style="background-color: #FFFFFF; padding: 30px; border: 1px solid #BBBBBB;" src="assets/OurReturns.png" alt="Our Returns" />
 			<br />
 			<span style="font-style: italic; font-size: 80%;">
 				** Past performance does not guarantee or imply future success. You cannot assume that profits or gains will be realized or that any opinion made by MSFT401k.com will be profitable.<br /><br />
 				<strong>MSFT401k.com:</strong> our strategy, which adjusts allocations monthly based on market risk.<br />
-				<strong>Equal Weight:</strong> equal distribution among 8 top funds.<br />
+				<strong>Equal Weight:</strong> equal distribution among 8 top funds diversified across typical asset classes.<br />
 				<strong>S&amp;P 500:</strong> Standard &amp; Poor's 500 index, which approximates "the stock market."<br />
 				<strong>60/40 (Stocks/Bonds):</strong> monthly rebalancing to 60% stocks and 40% bonds.<br />
-				<strong>BTC LifePath 2040:</strong> BlackRock fund claiming optimize for investors planning to retire around the year 2040.<br />
+				<strong>BTC LifePath 2040:</strong> BlackRock fund claiming to optimize for investors planning to retire around the year 2040.<br />
 				<strong>MSFT:</strong> the Microsoft common stock.
 			</span>
 		</div>
