--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -10,7 +10,7 @@
         <p>You're smart!  You've taken the first step toward higher returns and reduced volatility for your 401k.</p>
         <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Get Started Now</h3>
         <p>Update your 401k account now using our <a href="http://www.msft401k.com/stepbystep">step-by-step instructions</a> and this month's allocations.<sup>*</sup>  You should complete this rebalance by April 30.  In the future, we'll send you new allocations on the 1st of every month.  Your next rebalance notification will be on June 1.</p>
-        <h4 style="margin: 20px 0px 5px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 120%;">Allocations</h3>
+        <h4 style="margin: 20px 0px 5px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 120%;">Allocations</h4>
         <table style="font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; border: 1px solid black; padding: 0px; border-spacing: 0; border-collapse: collapse;">
           <tr>
             <td style="font-weight: bold; color: white; background-color: black; border: 1px solid black; padding: 3px 2px 2px 6px; text-align: left;">Fund Name</td>
@@ -55,6 +55,15 @@
         </table>
         <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Contact Us</h3>
         <p>Questions? Drop us a line: <a href="mailto:team@MSFT401k.com">team@MSFT401k.com</a>.</p>
+        <h3 style="margin: 30px 0px -10px 0px; font-family: ProximaNovaSemiBold, 'Helvetica Neue', Arial, sans-serif; font-size: 150%;">Frequently Asked Questions</h3>
+        <p>Question: by when should I complete the initial rebalance?<br />
+        Answer: you should complete this rebalance by April 30.</p>
+        <p>Question: on what day of the month will you be sending future rebalance notifications?<br />
+        Answer: in the future, we'll send you new allocations on the 1st of every month.</p>
+        <p>Question: when will my next rebalance notification be?<br />
+        Answer: your next rebalance notification will be on June 1.</p>
+        <p>Question: will you send rebalance notifications every month or only when there are significant changes?<br />
+        Answer: we will send you rebalance notifications every month even if they are small.</p>
         <br /><hr />
         <div>
           <p style="font-style: italic; font-size: 80%;">* Rebalancing to these allocations may result in a round-trip warning if you have rebalanced your portoflio within the past 30 days.</p>
